--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -13,11 +13,38 @@
     height: 15rem;
     width: 15rem;
     border-radius: 100% ;
-    margin-left: 25%;
-    margin-top: 10%;
 }
 
-.home div{
+@media (max-width : 768px) {
+    .home {
+        padding-left:25%;
+        padding-top: 10%;
+        min-width: 25rem;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .home img{
+        margin-top: 3rem;
+    }
+    .home h1{
+        padding-top: 10%;
+        color: white;
+    }
+    
+    .home h2{
+        margin-top: 5rem;
+        margin-left: 2rem;
+        color: white;
+    }
+}
+
+@media(min-width:768px){
+    .home img{
+        margin-left: 25%;
+        margin-top: 10%;
+    }
+    .home div{
     padding-left:10%;
     padding-top: 10%;
     min-width: 25rem;
@@ -31,4 +58,5 @@
     margin-top: 5rem;
     margin-left: 2rem;
     color: white;
+}
 }
