--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,27 +1,18 @@
-/* Projects.css */
-
 .projects-container {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 50px 20px;
-    text-align: center;
-  }
-  
-  .projects-heading {
-    font-size: 2.5em;
-    color: #333;
-    margin-bottom: 30px;
-  }
-  
-  .projects-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-  }
-  
-  @media (max-width: 768px) {
-    .projects-grid {
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    }
-  }
-  
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 50px 20px;
+  text-align: center;
+}
+
+.projects-heading {
+  font-size: 2.5em;
+  color: #333;
+  margin-bottom: 30px;
+}
+
+.projects-grid {
+  display: flex;
+  flex-direction: column; /* Colocar los productos uno debajo del otro */
+  gap: 20px;
+}
