--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -10,6 +10,7 @@
     color: white;
 }
 
+
 .nav1{
     font-size: 30px;    
 }
@@ -17,6 +18,8 @@
     font-size: 20px;
 }
 
+@media(min-width: 768px){
 .me-auto{
     margin-left: 25%;
+}
 }
