--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -8,20 +8,31 @@
     min-height: 30rem;
     flex-direction: row;
 }
-
+.home p{
+    padding-top: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
+    font-size: 12px;
+}
 .home img{
     height: 15rem;
     width: 15rem;
-    border-radius: 100% ;
+    border-radius: 25% ;
 }
 
+.home h1{
+    font-family:Georgia, 'Times New Roman', Times, serif ;
+}
+.home h2{
+    font-family:Georgia, 'Times New Roman', Times, serif ;
+}
 @media (max-width : 768px) {
     .home {
-        padding-left:25%;
+        overflow: hidden;
         padding-top: 10%;
-        min-width: 25rem;
+        min-height: 25rem;
         flex-direction: column;
-        justify-content: center;
+        align-items: center;
     }
 
     .home img{
@@ -34,8 +45,11 @@
     
     .home h2{
         margin-top: 5rem;
-        margin-left: 2rem;
+
         color: white;
+    }
+    .home p{
+        width: 17rem;
     }
 }
 
@@ -43,6 +57,8 @@
     .home img{
         margin-left: 25%;
         margin-top: 10%;
+        margin-right: 8rem;
+        border: solid red 2px;
     }
     .home div{
     padding-left:10%;
