--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -21,18 +21,21 @@
 .product-title {
   font-size: 1.8em;
   color: #333;
+  font-family:Georgia, 'Times New Roman', Times, serif ;
   margin-bottom: 10px;
 }
 
 .product-description {
   font-size: 1.1em;
   line-height: 1.6;
+  font-family: 'Courier New', Courier, monospace;
   color: #555;
   margin-bottom: 15px;
 }
 
 .product-link a {
   color: #007bff;
+  font-family: 'Courier New', Courier, monospace;
   text-decoration: none;
 }
 
