--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -13,6 +13,7 @@
   .about h2 {
     font-size: 2.5em;
     color: #333;
+    font-family:Georgia, 'Times New Roman', Times, serif ;
     text-align: center;
     margin-bottom: 20px;
   }
@@ -20,6 +21,7 @@
   .about p {
     font-size: 1.1em;
     line-height: 1.6;
+    font-family: 'Courier New', Courier, monospace;
     color: #555;
     text-align: justify;
   }
