--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,5 +1,3 @@
-/* Contact.css */
-
 .contact {
     font-family: 'Arial', sans-serif;
     max-width: 600px;
@@ -13,6 +11,7 @@
   .contact h1 {
     font-size: 2.5em;
     color: #333;
+    font-family:Georgia, 'Times New Roman', Times, serif ;
     text-align: center;
     margin-bottom: 20px;
   }
@@ -21,12 +20,14 @@
     font-size: 1.1em;
     line-height: 1.6;
     color: #555;
+    font-family: 'Courier New', Courier, monospace;
     margin-bottom: 15px;
   }
   
   .contact h2 {
     font-size: 1.8em;
     color: #333;
+    font-family:Georgia, 'Times New Roman', Times, serif ;
     margin-top: 30px;
     margin-bottom: 10px;
   }
